--- a/index.html
+++ b/index.html
@@ -235,18 +235,18 @@ type="text/css" title="Snp sig">
 	        Building upon the experience of the <b>previous VarI-SIG and SNP-SIG</b> editions:
 		<ul>
 		<li>
-		                                                            <a href="http://varisig.biofold.org/2014"><strong>VarI-SIG 2014</strong></a> in Boston, July 12, 2014
-		                                                                        </li>
-		                                                                                    <li>
-		                                                                                                <a href="http://varisig.biofold.org/2013"><strong>SNP-SIG 2013</strong></a> in Berlin, July 19, 2013
-		                                                                                                            </li>
-		                                                                                                                        <li>
-		                                                                                                                                    <a href="http://varisig.biofold.org/2012"><strong>SNP-SIG 2012</strong></a> in Long Beach, July 14, 2012
-		                                                                                                                                                </li>
-		                                                                                                                                                            <li>
-		                                                                                                                                                                        <a href="http://varisig.biofold.org/2011"><strong>SNP-SIG 2011</strong></a> in Vienna, July 15, 2011.
-		                                                                                                                                                                                    </li>
-		                                                                                                                                                                                                </ul>
+		<a href="./2014"><strong>VarI-SIG 2014</strong></a> in Boston, July 12, 2014
+		</li>
+		<li>
+		<a href="./2013"><strong>SNP-SIG 2013</strong></a> in Berlin, July 19, 2013
+		</li>
+		<li>
+		<a href="./2012"><strong>SNP-SIG 2012</strong></a> in Long Beach, July 14, 2012
+		</li>
+		<li>
+		<a href="./2011"><strong>SNP-SIG 2011</strong></a> in Vienna, July 15, 2011.
+		</li>
+		</ul>
 	     and other international workshops and meetings 
 	    (e.g. <a href="http://www.eccb10.org/index.php/workshops/workshop2" target="_blank"><strong>AIMM2010</strong></a>, <a href="http://genomeinterpretation.org/" target="_blank"><strong>CAGI</strong></a>, <a href="http://www.hgvs.org/DC/" target="_blank"><strong>HGVS 2010</strong></a> and <a href="http://psb.stanford.edu/" target="_blank"><strong>PSB2011</strong></a>) 
 	    the VarI-SIG will serve to <strong>build a research network </strong>, 
