--- a/abstract.html
+++ b/abstract.html
@@ -244,8 +244,14 @@ type="text/css" title="Snp sig">
             <td valign="top"><div align="right"></div></td>
           </tr>
         </table>
+
 	<br />
-       
+<!---
+	<a href="https://www.easychair.org/conferences/?conf=varisig2016" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('submit5','','img/submit1.gif',1)" target="blank" class="mouse">
+        <img src="img/submit.gif" alt="submit" name="submit5" width="85" height="30" border="0" id="submit5" /></a>
+
+	<br /><br>
+--->       
         <p class="textzone"><img src="img/PU.gif" width="12" height="12" />   <strong>Databases, data mining algorithms and visualization tools for genetic variant analysis</strong>.
         <br />
         Current genomic databases contain millions of SNVs and vast amounts of related
