--- a/conta.html
+++ b/conta.html
@@ -231,7 +231,7 @@ type="text/css" title="Snp sig">
           Direct your <strong>comments and suggestions</strong> regarding the VarI-SIG meeting to the organizers.</p>
                   <br>
 		  <strong><img src="img/PU3.gif" width="17" height="14" />  Yana Bronberg: </strong><span class="textzone">yanab@rci.rutgers.edu</span><br />
-		  <strong><br><img src="img/PU3.gif" width="17" height="14" />  Emidio Capriotti: </strong>emidio@uab.edu<br />
+		  <strong><br><img src="img/PU3.gif" width="17" height="14" />  Emidio Capriotti: </strong>emidio.capriotti@hhu.de<br />
 		  <strong><br><img src="img/PU3.gif" width="17" height="14" />  Hannah Carter: </strong>hkcarter@ucsd.edu<br />
                 <br />
                 <br />
