--- a/index.html
+++ b/index.html
@@ -218,22 +218,27 @@ type="text/css" title="Snp sig">
         </p>
         <p class="textzone"><h3>GENERAL INFO:</h3>
                   <b>WHAT:</b>  A one-day special interest group meeting<br>
-		  <b>WHEN:</b> July 11th, 2015<br>
-		  <b>WHERE:</b> Room Liffey Meeting 2, Convention Center, Dublin, Ireland.<br />
+		  <b>WHEN:</b> 8:30 AM - 6:00 PM, July 9th, 2016<br>
+		  <b>WHERE:</b> Room Mockingbird 2, Swan Hotel, Orlando (FL), USA.<br />
                                                                     
 		  <br /><br />
 		</strong>
+		
 		<img src="img/PU3.gif" width="17" height="14" /><img src="img/PU1.gif" width="12" height="12" />
                 <blink><font color="red">Updated</font></blink>
-		VarI-SIG 2015 Meeting Programme and Abstracts
-		<a href="docs/vari-sig-2015-programme.pdf"><img src="img/pdf.gif"></a></i>
+		VarI-SIG 2016 Meeting Preliminary Program
+		<a href="docs/vari-sig-2016-programme.pdf"><img src="img/pdf.gif"></a></i>
 		<br />
 		<br />
+		
 		</strong>
 		<h3>SIG AIMS:</h3>
 		The primary goal of the VarI-SIG is to outline and discuss the recent advances in the<strong> methodology for the annotation and analysis of genetic variants</strong>.
 	        Building upon the experience of the <b>previous VarI-SIG and SNP-SIG</b> editions:
 	    <ul>
+	    	<li>
+	    	<a href="./2015"><strong>VarI-SIG 2015</strong></a> in Dublin, July 11, 2015
+	    	</li>
 		<li>
 		<a href="./2014"><strong>VarI-SIG 2014</strong></a> in Boston, July 12, 2014
 		</li>
