--- a/kd.html
+++ b/kd.html
@@ -230,25 +230,25 @@ type="text/css" title="Snp sig">
         <br />
         <br />
 		<strong>The following is a preliminary list of dates and deadlines.</strong> Please check back soon for a more complete schedule or contact the VarI-SIG <a href='people.html'>organizers</a> with any questions and/or concerns<br />
-		<li>Poster Abstract and Presentation Proposal submissions open: <strong>February 6, 2015</strong></li>
-		<li>Poster Abstract and Presentation Proposal submissions deadline: <strong>April 12, 2015</strong></li>
+		<li>Poster Abstract and Presentation Proposal submissions open: <strong>February 5, 2016</strong></li>
+		<li>Poster Abstract and Presentation Proposal submissions deadline: <strong>April 10, 2016</strong></li>
 
 
-        <li>Poster and Presentation Proposal acceptance notifications sent out: <strong>April 26, 2015</strong></li>
+        <li>Poster and Presentation Proposal acceptance notifications sent out: <strong>April 24, 2016</strong></li>
         <br><br>
-		<b>Keynote and Poster SIG Program Available: April 26, 2015</b>
+		<b>Keynote and Poster SIG Program Available: April 24, 2016</b>
 		<br><br>
-		<b>Preliminary SIG Program Available: May 10, 2015</b>
+		<b>Preliminary SIG Program Available: May 8, 2016</b>
 		<br><br>
-		<b>Complete SIG Program Available: May 29, 2015</b>
+		<b>Complete SIG Program Available: May 27, 2016</b>
 		<br><br>
-		<b>Vari-SIG meeting: July 11, 2015</b>
+		<b>VarI-SIG meeting: July 9, 2016</b>
 		<br><br>
 		<br>
 		<b>Note:</b> All Proposal submission abstracts are automatically considered for Poster presentations.
                	<br>
                 All Poster Abstract submissions could be presented into the general conference poster session if submitted 
-                separately on the ISCB website. ISMB Poster and Late Poster submission deadlines are respectively March 12 and April 17, 2015. 
+                separately on the ISCB website. ISMB Poster and Late Poster submission deadlines are respectively March 10 and April 15, 2016. 
         </p>
           <p align="left" class="textzone">&nbsp;</p>
           <p align="left" class="textzone">
