--- a/people.html
+++ b/people.html
@@ -244,13 +244,13 @@ type="text/css" title="Snp sig">
         <br />
         <br />
         <strong>Emidio Capriotti</strong>        <br />
-        Division of Informatics, Department of Pathology
+        Institute for Mathematical Modeling of Biological Systems
         <br />
-        University of Alabama at Birmingham
+        University of Dusseldorf
         <br />
-        Birmingham, AL (USA)
+        Dusseldorf (Germany)
         <br />
-        e-mail: emidio@uab.edu
+        e-mail: emidio.capriotti@hhu.de
         <br />
         <br />
         <strong>Hannah Carter</strong>        <br />
@@ -264,17 +264,30 @@ type="text/css" title="Snp sig">
         <br />
         <br />
         <br />
-        <strong><img src="img/PU.gif" alt="" width="12" height="12" /> Roundtable Organizer</strong><br />
+        <strong><img src="img/PU.gif" alt="" width="12" height="12" /> CAGI Session Organizers</strong><br />
         <br />
-	<b>TBA</b><br> 
-	<br> 
+	<b>Steven Brenner</b><br>
+	University of California, Berkeley
+	<br />
+        Berkeley, CA (USA)
+	<br>
+	email:brenner@compbio.berkeley.edu
+	<br />
+	<br />
+        <b>John Moult</b><br>
+        University of Maryland
+        <br />
+        Rockville, MD (USA) 
+        <br>
+        email: moult@umbi.umd.edu
+        <br />
 	</i>
 
     <br />
     <br />
-	<br> 
-    <br />
-    <br />
+	<br>
+    <br />    
+<br />
 	<br> 
 
         </p></td>
