--- a/special.html
+++ b/special.html
@@ -231,45 +231,45 @@ type="text/css" title="Snp sig">
         <br />
 	As for the previous editions, the VarI-SIG organizers will invite the authors of <strong>all presented papers</strong> and <strong> strong posters</strong>
         to submit their work for the next special issue publication.<br><br>
-        The <b><a href="http://snpsig.biofold.org/2014" target=blank>VarI-SIG 2014</a></b> 
+        The <b><a href="http://snpsig.biofold.org/2014" target=blank>VarI-SIG 2015</a></b> 
         Special Issue has been published on BMC Genomics. 
         The accepted papers of the special issue are available at BMC Genomics
-	<b><a href="http://www.biomedcentral.com/bmcgenomics/supplements/16/S8" target=blank>web page</a></b>.
+	<b><a href="https://bmcgenomics.biomedcentral.com/articles/supplements/volume-17-supplement-2" target=blank>web page</a></b>.
 	<br>
 	<br>The list of the selected manuscript is reported below.
 	<br><br>
 	<ul><li>
-	Bromberg Y, Capriotti E: VarI-SIG 2014: from SNPs to variants: interpreting different types of genetic variants. BMC Genomics 2015, 16(Suppl 8):I1.
-	<a href='http://www.biomedcentral.com/content/pdf/1471-2164-16-S8-I1.pdf'>PMID:TBA</a>.</li><br> 
-        <li>
-        Hecht M, Bromberg Y, Rost B: Better prediction of functional effects for sequence variants. BMC Genomics 2015, 16(Suppl 8):S1. 
-        <a href='http://www.biomedcentral.com/content/pdf/1471-2164-16-S8-S1.pdf'>PMID:TBA</a>.</li><br>
-        <li>
-	Frankish A, Uszczynska B, Ritchie GRS, Gonzalez JM, Pervouchine D, Petryszak R, Mudge JM, Fonseca N, Brazma A, Guigo R, Harrow J: Comparison of GENCODE and RefSeq gene annotation and the impact of reference geneset on variant effect prediction. BMC Genomics 2015, 16(Suppl 8):S2. 
-	<a href='http://www.biomedcentral.com/content/pdf/1471-2164-16-S8-S2.pdf'>PMID:TBA</a>.</li><br>
+	Bromberg Y, Capriotti E, Carter H: VarI-SIG 2015: methods for personalized medicine – the role of variant interpretation in research and diagnostics. BMC Genomics 2016 17(Suppl 2):425. 
+	<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-016-2721-3?site=bmcgenomics.biomedcentral.com"> PMID:TBA</a>.</li><br>
+    <li>
+        Stelzer G, Plaschkes I, Oz-Levi D, Alkelai A, Olender T, Zimmerman S, Twik M, Belinky F, Fishilevich S, Nudel R, Guan-Golan Y, Warshawsky D, Dahary D, Kohn A, Mazor Y, Kaplan S, Iny Stein T, Baris HN, Rappaport N, Safran M and Lancet D:
+        VarElect: the phenotype-based variation prioritizer of the GeneCards Suite. BMC Genomics 2016 17(Suppl 2):444. 
+        <a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-016-2722-2?site=bmcgenomics.biomedcentral.com"> PMID:TBA</a>.</li><br>
+
 	<li>	
-	 Ma M, Ru Y, Chuang LS, Hsu NY, Shi LS, Hakenberg J, Cheng WY, Uzilov A, Ding W, Glicksberg BS, Chen R: Disease-associated variants in different categories of disease located in distinct regulatory elements. BMC Genomics 2015, 16(Suppl 8):S3. 
-	<a href='http://www.biomedcentral.com/content/pdf/1471-2164-16-S8-S3.pdf'>PMID:TBA</a>.</li><br>
+		Pons T, Vazquez M, Matey-Hernandez ML, Brunak S, Valencia A and Izarzugaza JMG: KinMutRF: a random forest classifier of sequence variants in the human protein kinase superfamily. BMC Genomics 2016 17(Suppl 2):396. 
+		<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-016-2723-1?site=bmcgenomics.biomedcentral.com"> PMID:TBA</a>.</li><br>
 	<li>	
-	Pal LR, Yu C-H, Mount SM, Moult J: Insights from GWAS: emerging landscape of mechanisms underlying complex trait disease. BMC Genomics 2015, 16(Suppl 8):S4. 
-	<a href='http://www.biomedcentral.com/content/pdf/1471-2164-16-S8-S4.pdf'>PMID:TBA</a>.</li><br>
+		Kaplun A, Krull M, Lakshman K, Matys V,Lewicki B,  Jennifer D. Hogan JD: Establishing and validating regulatory regions for variant annotation and expression analysis. BMC Genomics 2016 17(Suppl 2):393. 
+		<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-016-2724-0?site=bmcgenomics.biomedcentral.com"> PMID:TBA</a>.</li><br>
 	<li>	
-	Gnad F, Doll S, Manning G, Arnott D, Zhang Z: Bioinformatics analysis of thousands of TCGA tumors to determine the involvement of epigenetic regulators in human cancer. BMC Genomics 2015, 16(Suppl 8):S5. 
-	<a href='http://www.biomedcentral.com/content/pdf/1471-2164-16-S8-S5.pdf'>PMID:TBA</a>.</li><br>
+		Ayers KL, Mirshahi UL, Wardeh AH, Murray MF, Hao K, Glicksberg BS, Li S, Carey DJ, Chen R: A loss of function variant in CASP7 protects against Alzheimer’s disease in homozygous APOE ε4 allele carriers. BMC Genomics 2016 17(Suppl 2):445. 
+		<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-016-2725-z?site=bmcgenomics.biomedcentral.com"> PMID:TBA</a>.</li><br>
 	<li>
-	Di Lena P, Martelli PL, Fariselli P, Casadio R: NET-GE: a novel NETwork-based Gene Enrichment for detecting biological processes associated to Mendelian diseases. BMC Genomics 2015, 16(Suppl 8):S6. 
-	<a href='http://www.biomedcentral.com/content/pdf/1471-2164-16-S8-S6.pdf'>PMID:TBA</a>.</li><br>
+		Martelli PL, Fariselli P, Savojardo C, Babbi G, Aggazio F, Casadio R: Large scale analysis of protein stability in OMIM disease related human protein variants. BMC Genomics 2016 17(Suppl 2):397. 
+		<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-016-2726-y?site=bmcgenomics.biomedcentral.com"> PMID:TBA</a>.</li><br>
 	<li>	
-	Tian R, Basu MK, Capriotti E: Computational methods and resources for the interpretation of genomic variants in cancer. BMC Genomics 2015, 16(Suppl 8):S7. 
-	<a href='http://www.biomedcentral.com/content/pdf/1471-2164-16-S8-S7.pdf'>PMID:TBA</a>.</li><br>
+		Chen T, Wang Z, Zhou W, Chong Z, Meric-Bernstam F, Mills GB, Chen K: Hotspot mutations delineating diverse mutational signatures and biological utilities across cancer types. BMC Genomics 2016 17(Suppl 2):394. 
+		<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-016-2727-x?site=bmcgenomics.biomedcentral.com"> PMID:TBA</a></li><br>
 	<li>
-	Handelman SK, Seweryn M, Smith RM, Hartmann K, Wang D, Pietrzak M, Johnson AD, Kloczkowski A, Sadee W: Conditional entropy in variation-adjusted windows detects selection signatures associated with expression quantitative trait loci (eQTLs). BMC Genomics 2015, 16(Suppl 8):S8. 
-	<a href='http://www.biomedcentral.com/content/pdf/1471-2164-16-S8-S8.pdf'>PMID:TBA</a>.</li><br>
-	<li>	
-	Kozlov K, Chebotarev D, Hassan M, Triska M, Triska P, Flegontov P, Tatarinova TV: Differential Evolution approach to detect recent admixture. BMC Genomics 2015, 16(Suppl 8):S9. 
-	<a href='http://www.biomedcentral.com/content/pdf/1471-2164-16-S8-S9.pdf'>PMID:TBA</a>.</li><br>
+		Vorontsov IE, Khimulya G, Lukianova EN, Nikolaeva DD, Eliseeva IA, Kulakovskiy IV, Makeev VJ: Negative selection maintains transcription factor binding motifs in human cancer. BMC Genomics 2016 17(Suppl 2):395. 
+		<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-016-2728-9?site=bmcgenomics.biomedcentral.com"> PMID:TBA</a>.
+		</li><br>
 	</ul>
 	<br>
+	The BMC Gemomics special issue of the <b><a href="http://varisig.biofold.org/2014" target=blank>VarI-SIG 2014</a></b> is available at the following
+        <b><a href="https://bmcgenomics.biomedcentral.com/articles/supplements/volume-16-supplement-8" target=blank>web page</a></b>.
+        <br><br>
 	The BMC Gemomics special issue of the <b><a href="http://varisig.biofold.org/2013" target=blank>SNP-SIG 2013</a></b> is available at the following
         <b><a href="http://www.biomedcentral.com/bmcgenomics/supplements/15/S4" target=blank>web page</a></b>.
         <br><br>
