--- a/company.html
+++ b/company.html
@@ -236,7 +236,7 @@ type="text/css" title="Snp sig">
 <p class="textzone"><img src="img/PU.gif" width="12" height="12" />
 <b>Company Presentations</b> 
 <br />
-This year's SIG hopes to foster Industry/Academia collaborations in 
+Our COSI hopes to foster Industry/Academia collaborations in 
 the field of SNV-related research. In light of this effort, a few 
 opportunities for companies to showcase products and services to 
 the conference delegates hae been created. These 15-minute 
@@ -253,26 +253,19 @@ Presentation requests.
 <p class="textzone"><img src="img/PU1.gif" width="12" height="12" />
 <b>Sponsorship</b>
 <br />
-We welcome company contributions to support the VarI-SIG activities. 
+We welcome company contributions to support the VarI-COSI activities. 
 Non-presenting companies are welcome to purchase a <b>supporting member 
 registration at the level of $800</b>. 
-This registration includes: poster space in the SIG session, mention 
-in the VarI-SIG program and ability to distribute company material to 
-VarI-SIG participants.
-<br />
-<br />
-<p class="textzone"><img src="img/PU2.gif" width="12" height="12" />
-<b>VarI-SIG Dinner</b>
-<br />
-In our <b>fifth anniversary year of the SIG</b>, we will be organizing a reception after the meeting. We are looking for named company sponsors to join us for this event. Please contact the organizers for pricing information.
+This registration includes: poster space in the COSI session, mention 
+in the VarI-COSI program and ability to distribute company material to 
+VarI-COSI participants.
 <br />
 <br />
 <br />
-<br />
-	<b>Note</b>: VarI-SIG Company Presenters and Sponsors will have no 
-	recognition in main conference programming. Please contact 
-	<a href="mailto:steven@marketwhys.ca"> Steven Leard</a> for company 
-	opportunities in the context of ISMB.
+	<b>Note</b>: For information about the sponsorship of the 
+	VARI-COSI session and other activities of the ISMB conference
+	please contact 
+	<a href="mailto:steven@marketwhys.ca">Steven Leard</a> for company.
         </p>
           <p class="textzone"><br />
                 <br />
