--- a/conta.html
+++ b/conta.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>VarI special interest group</title>
+<title>VarI-COSI - Variant Interpretation Community Of Special Interest</title>
 <style type="text/css">
 
 body {
@@ -231,7 +231,7 @@ type="text/css" title="Snp sig">
           Direct your <strong>comments and suggestions</strong> regarding the VarI-SIG meeting to the organizers.</p>
                   <br>
 		  <strong><img src="img/PU3.gif" width="17" height="14" />  Yana Bronberg: </strong><span class="textzone">yanab@rci.rutgers.edu</span><br />
-		  <strong><br><img src="img/PU3.gif" width="17" height="14" />  Emidio Capriotti: </strong>emidio.capriotti@hhu.de<br />
+		  <strong><br><img src="img/PU3.gif" width="17" height="14" />  Emidio Capriotti: </strong>emidio.capriotti@unibo.it<br />
 		  <strong><br><img src="img/PU3.gif" width="17" height="14" />  Hannah Carter: </strong>hkcarter@ucsd.edu<br />
                 <br />
                 <br />
