--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="Keywords" content="VarI-SIG, Variant Interpretation,
-Special Interest Group, Genetic Variants, Annotation">
-<title>Vari special interest group</title>
+<meta name="Keywords" content="VarI-SIG, VarI-COSI, Variant Interpretation,
+community of special interest, Special Interest Group, Genetic Variants, Annotation">
+<title>VarI-COSI - Variant Interpretation Community Of Special Interest</title>
 <style type="text/css">
 
 body {
@@ -214,31 +214,40 @@ type="text/css" title="Snp sig">
       <tr>
         <td colspan="4"> <p class="textzone">
         <br />
-        <h2>VarI-SIG: Identification and annotation of genetic variants in the context of structure, function, and disease.        </h2>
+        <h2>VarI-COSI: Identification and annotation of genetic variants in the context of structure, function, and disease.        	        
+        </h2>
         </p>
         <p class="textzone"><h3>GENERAL INFO:</h3>
-                  <b>WHAT:</b>  A one-day special interest group meeting<br>
-		  <b>WHEN:</b> 8:30 AM - 6:00 PM, July 9th, 2016<br>
-		  <b>WHERE:</b> Room Mockingbird 2, Swan Hotel, Orlando (FL), USA.<br />
+                  <b>WHAT:</b>  Variant Interpretation COSI Session at the ISMB/ECCB Conference<br>
+		  <b>WHEN:</b> 10:00 AM - 6:00 PM, July 24th, 2017<br>
+		  <b>WHERE:</b> Prague Convention Center, Prague, Czech Republic.<br />
                                                                     
 		  <br /><br />
 		</strong>
 		
+		
 		<img src="img/PU3.gif" width="17" height="14" /><img src="img/PU1.gif" width="12" height="12" />
-                <blink><font color="red">Updated</font></blink>
-		VarI-SIG 2016 Meeting Preliminary Program
+                <b>Open Call for <a href="./op.html">Presentation Proposals</a>
+		and <a href="./pa.html">Poster Abstracts</a>.</b>
+		 
+<!--
+    		<blink><font color="red"></font></blink>
 		<a href="docs/vari-sig-2016-programme.pdf"><img src="img/pdf.gif"></a></i>
+-->
 		<br />
 		<br />
 		
 		</strong>
-		<h3>SIG AIMS:</h3>
-		The primary goal of the VarI-SIG is to outline and discuss the recent advances in the<strong> methodology for the annotation and analysis of genetic variants</strong>.
+		<h3>COSI AIMS:</h3>
+		The primary goal of the VarI-COSI is to outline and discuss the recent advances in the<strong> methodology for the annotation and analysis of genetic variants</strong>.
 	        Building upon the experience of the <b>previous VarI-SIG and SNP-SIG</b> editions:
 	    <ul>
-	    	<li>
-	    	<a href="./2015"><strong>VarI-SIG 2015</strong></a> in Dublin, July 11, 2015
-	    	</li>
+	    <li>
+	    	<a href="./2016"><strong>VarI-SIG 2016</strong></a> in Orlando, July 9, 2016
+	    </li>
+	    <li>
+	    <a href="./2015"><strong>VarI-SIG 2015</strong></a> in Dublin, July 11, 2015
+	    </li>
 		<li>
 		<a href="./2014"><strong>VarI-SIG 2014</strong></a> in Boston, July 12, 2014
 		</li>
@@ -254,9 +263,9 @@ type="text/css" title="Snp sig">
 	     </ul>
 	     and other international workshops and meetings 
 	    (e.g. <a href="http://www.eccb10.org/index.php/workshops/workshop2" target="_blank"><strong>AIMM2010</strong></a>, <a href="http://genomeinterpretation.org/" target="_blank"><strong>CAGI</strong></a>, <a href="http://www.hgvs.org/DC/" target="_blank"><strong>HGVS 2010</strong></a> and <a href="http://psb.stanford.edu/" target="_blank"><strong>PSB2011</strong></a>) 
-	    the VarI-SIG will serve to <strong>build a research network </strong>, 
+	    the VarI-COSI will serve to <strong>build a research network </strong>, 
 	    facilitating the exchange of ideas and the establishment of new 
-	    collaborations within the community. Thus, Vari-SIG will strive 
+	    collaborations within the community. Thus, Vari-COSI will strive 
 	    to meaningfully contribute to the management of the complexity of the 
 	    analysis and evaluation of genetic variants.
             <br />
