--- a/pa.html
+++ b/pa.html
@@ -234,29 +234,26 @@ type="text/css" title="Snp sig">
 <li>Methods for predicting regulatory/structural/functional impacts of genetic variants.</li>
 <li>Personal Genomics, GWAS studies and SNV prioritization.</li>
 <li>Population genomics and phylogenetic analysis. </li>
-<!---
 <br>
 
-<a href="https://www.easychair.org/conferences/?conf=varisig2016" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('submit5','','img/submit1.gif',1)" target="blank" class="mouse"><img src="img/submit.gif" alt="submit" name="submit5" width="85" height="30" border="0" id="submit5" /></a>
+<a href="https://www.iscb.org/submissions/posters2017.php" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('submit5','','img/submit1.gif',1)" target="blank" class="mouse"><img src="img/submit.gif" alt="submit" name="submit5" width="85" height="30" border="0" id="submit5" /></a>
 
---->
 <br /><br>
 <strong>SUBMISSION GUIDELINES:</strong>
 <br /><br />
-Posters are intended to convey a scientific result and are not advertisements for commercial software packages. There will be a separate space for Industry Posters in the exhibition area of the ISMB general conference - to learn more about Industry Posters contact steven@iscb.org. Additionally, <a href='company.html'><b>sponsorship slots</b></a> are available for the VarI-SIG by contacting the <a href='conta.html'><b>organizers</a></b>. A poster that is judged by the conference organizers to be an advertisement will be subject to removal without notice.
+Posters are intended to convey a scientific result and are not advertisements for commercial software packages. There will be <a href='company.html'><b>sponsorship slots</b></a>  available for the VarI-COSI session by contacting the <a href='conta.html'><b>organizers</a></b>. A poster that is judged by the conference organizers to be an advertisement will be subject to removal without notice.
 <br /><br />
-Posters submitted may cover any area of computational or experimental genome variation biology. Posters presenting original work that is unpublished or published after August 1, 2016
-are preferred.
+Posters submitted may cover any area of computational or experimental genome variation biology. Posters presenting original work that is unpublished or published after August 1, 2017 are preferred.
 <br /><br />
-Submitted posters will be reviewed by the poster session chair and notification of acceptance will be provided to the corresponding author no later than April 24, 2016. 
+Submitted posters will be reviewed by the poster session chair and notification of acceptance will be provided to the corresponding author no later than May 31, 2017. 
 Accepted posters could be also presented in the general conference poster session, submitting them separately on the main conference poster track. 
-General conference poster session <b><a href='https://www.iscb.org/ismb2016-submission/ismb2016-call-for-posters'>rules</a></b> will apply to all poster presenters.
+General conference poster session <b><a href='https://www.iscb.org/ismbeccb2017/2930'>rules</a></b> will apply to all poster presenters.
 <br /><br />
-Authors of accepted posters may be eligible to apply for Conference Travel Fellowships. All poster abstracts must be submitted by the abstract  deadline: April 10, 2016 (You have until 11.59 p.m. in the time zone of your choice). Space for posters is limited, and while we will make every effort to accommodate all interested groups, we advise you to submit your poster well before the deadline. 
+Authors of accepted posters may be eligible to apply for Conference Travel Fellowships. All poster abstracts must be submitted by the abstract  deadline: May 15, 2017 (You have until 11.59 p.m. in the time zone of your choice). Space for posters is limited, and while we will make every effort to accommodate all interested groups, we advise you to submit your poster well before the deadline. 
 <br /><br />
-You must submit a 250 word poster abstract that will be included in the electronic VarI-SIG and general conference programs and posted on the general conference web site.
+You must submit a 250 word poster abstract that will be included in the electronic VarI-COSI and general conference programs and posted on the general conference web site.
 <br /><br />
-The abstract <b>should not</b> contain your title/position or any personal information (e.g. affiliation). There is a maximum of one poster per presenting author. The presenting author of a poster must be registered delegate and be available at the poster session to which their poster is assigned. Posters accepted for the main ISMB conference will be on display the day of the SIG and during the poster sessions of the general conference. Flowing the VarI-SIG, the authors should be present and available to discuss their posters. The schedule for the general conference Poster Sessions with Authors will be announces. Authors should be prepared in advanced to be available to present on their assigned day. 
+The abstract <b>should not</b> contain your title/position or any personal information (e.g. affiliation). There is a maximum of one poster per presenting author. The presenting author of a poster must be registered delegate and be available at the poster session to which their poster is assigned. Posters accepted for the main ISMB conference during the poster sessions of the general conference. The authors of the VarI-COSI posters should be present and available to discuss their posters. The schedule for the general conference Poster Sessions with Authors will be announces. Authors should be prepared in advanced to be available to present on their assigned day. 
 <br /><br />
 The ideal poster size should be max. 1.30 m (130 cm) high x 0.90 m (90 cm) wide. Fasteners (Velcro / double sided tape) will be provided at the site, please DO NOT bring tape, tacks or pins.
 <br /><br />
