--- a/people.html
+++ b/people.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>VarI special interest group</title>
+<title>VarI-COSI - Variant Interpretation Community Of Special Interest</title>
 <style type="text/css">
 
 body {
@@ -230,7 +230,7 @@ type="text/css" title="Snp sig">
       </tr>
       <tr>
         <td colspan="4"> <p class="textzone"><br />
-        <strong><img src="img/PU3.gif" width="17" height="14" /> SIG Chairs        </strong><br />
+        <strong><img src="img/PU3.gif" width="17" height="14" /> COSI Chairs        </strong><br />
         <br />
         <strong>Yana Bromberg        </strong><br />
         Department of Biochemistry and Microbiology
@@ -244,13 +244,13 @@ type="text/css" title="Snp sig">
         <br />
         <br />
         <strong>Emidio Capriotti</strong>        <br />
-        Institute for Mathematical Modeling of Biological Systems
+        Department of Biological, Geological, and Environmental Sciences
         <br />
-        University of Dusseldorf
+        University of Bologna
         <br />
-        Dusseldorf (Germany)
+        Bologna (Italy)
         <br />
-        e-mail: emidio.capriotti@hhu.de
+        e-mail: emidio.capriotti@unibo.it
         <br />
         <br />
         <strong>Hannah Carter</strong>        <br />
@@ -264,23 +264,13 @@ type="text/css" title="Snp sig">
         <br />
         <br />
         <br />
-        <strong><img src="img/PU.gif" alt="" width="12" height="12" /> CAGI Session Organizers</strong><br />
+        <strong><img src="img/PU.gif" alt="" width="12" height="12" /> Round Table Organizers</strong><br />
         <br />
-	<b>Steven Brenner</b><br>
-	University of California, Berkeley
+	<b>TBA</b><br>
 	<br />
-        Berkeley, CA (USA)
 	<br>
-	email:brenner@compbio.berkeley.edu
 	<br />
 	<br />
-        <b>John Moult</b><br>
-        University of Maryland
-        <br />
-        Rockville, MD (USA) 
-        <br>
-        email: moult@umbi.umd.edu
-        <br />
 	</i>
 
     <br />
