--- a/special.html
+++ b/special.html
@@ -229,22 +229,12 @@ type="text/css" title="Snp sig">
         <td colspan="4"> <p class="textzone">
         <br />
         <br />
-	As for the previous editions, the VarI-SIG organizers will invite the authors of <strong>all presented papers</strong> and <strong> strong posters</strong>
+	As for the previous editions, the VarI-COSI organizers will invite the authors of <strong>the presented papers</strong> and <strong> strong posters</strong>
         to submit their work for the next special issue publication.<br><br>
-        The <b><a href="http://snpsig.biofold.org/2014" target=blank>VarI-SIG 2015</a></b> 
-        Special Issue has been published on BMC Genomics. 
-        The accepted papers of the special issue are available at BMC Genomics
-	<b><a href="https://bmcgenomics.biomedcentral.com/articles/supplements/volume-17-supplement-2" target=blank>web page</a></b>.
-	<br>
-	<br>The list of the selected manuscript is reported below.
-	<br><br>
-	<ul><li>
-	Bromberg Y, Capriotti E, Carter H: VarI-SIG 2015: methods for personalized medicine – the role of variant interpretation in research and diagnostics. BMC Genomics 2016 17(Suppl 2):425. 
-	<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-016-2721-3?site=bmcgenomics.biomedcentral.com"> PMID:TBA</a>.</li><br>
-    <li>
-        Stelzer G, Plaschkes I, Oz-Levi D, Alkelai A, Olender T, Zimmerman S, Twik M, Belinky F, Fishilevich S, Nudel R, Guan-Golan Y, Warshawsky D, Dahary D, Kohn A, Mazor Y, Kaplan S, Iny Stein T, Baris HN, Rappaport N, Safran M and Lancet D:
-        VarElect: the phenotype-based variation prioritizer of the GeneCards Suite. BMC Genomics 2016 17(Suppl 2):444. 
-        <a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-016-2722-2?site=bmcgenomics.biomedcentral.com"> PMID:TBA</a>.</li><br>
+        The papers for the <b><a href="" target=blank>VarI-SIG 2016</a></b> 
+        on BMC Genomics are currently under review. 
+<!--        
+	<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-016-2722-2?site=bmcgenomics.biomedcentral.com"> PMID:TBA</a>.</li><br>
 
 	<li>	
 		Pons T, Vazquez M, Matey-Hernandez ML, Brunak S, Valencia A and Izarzugaza JMG: KinMutRF: a random forest classifier of sequence variants in the human protein kinase superfamily. BMC Genomics 2016 17(Suppl 2):396. 
@@ -266,6 +256,12 @@ type="text/css" title="Snp sig">
 		<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-016-2728-9?site=bmcgenomics.biomedcentral.com"> PMID:TBA</a>.
 		</li><br>
 	</ul>
+-->
+	<br>
+	<br><br>
+        The BMC Gemomics special issue of the <b><a href="http://varisig.biofold.org/2015" target=blank>VarI-SIG 2015</a></b> is available at the following
+        <b><a href="https://bmcgenomics.biomedcentral.com/articles/supplements/volume-17-supplement-2" target=blank>web page</a></b>.
+        <br>
 	<br>
 	The BMC Gemomics special issue of the <b><a href="http://varisig.biofold.org/2014" target=blank>VarI-SIG 2014</a></b> is available at the following
         <b><a href="https://bmcgenomics.biomedcentral.com/articles/supplements/volume-16-supplement-8" target=blank>web page</a></b>.
