--- a/topics.html
+++ b/topics.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>VarI special interest group</title>
+<title>VarI-COSI - Variant Interpretation Community Of Special Interest</title>
 <style type="text/css">
 
 body {
@@ -227,7 +227,7 @@ type="text/css" title="Snp sig">
       <tr>
         <td colspan="4"> <p class="textzone"><br />
         <br />
-	The <strong>VarI-SIG meeting </strong>is broadly divided in two sessions (“Genetic variants as markers: evolution, populations,
+	The <strong>VarI-COSI meeting </strong>is broadly divided in two sessions (“Genetic variants as markers: evolution, populations,
 GWAS” and “Genetic variants as effectors: function, structure, and regulation”) that encompass the four major research topics of the field:
         <br />
         <br />
