--- a/kd.html
+++ b/kd.html
@@ -229,26 +229,22 @@ type="text/css" title="Snp sig">
         <td colspan="4"> <p align="left" class="textzone">
         <br />
         <br />
-		<strong>The following is a preliminary list of dates and deadlines.</strong> Please check back soon for a more complete schedule or contact the VarI-SIG <a href='people.html'>organizers</a> with any questions and/or concerns<br />
-		<li>Poster Abstract and Presentation Proposal submissions open: <strong>February 5, 2016</strong></li>
-		<li>Poster Abstract and Presentation Proposal submissions deadline: <strong>April 10, 2016</strong></li>
+		<strong>The following is a preliminary list of dates and deadlines.</strong> Please check back soon for a more complete schedule or contact the VarI-COSI <a href='people.html'>organizers</a> with any questions and/or concerns<br />
+		<li>Poster Abstract and Presentation Proposal submissions open: <strong>February 7, 2017</strong></li>
+		<li>Presentation Proposal submissions deadline: <strong>March 10, 2017</strong></li>
 
-
-        <li>Poster and Presentation Proposal acceptance notifications sent out: <strong>April 24, 2016</strong></li>
-        <br><br>
-		<b>Keynote and Poster SIG Program Available: April 24, 2016</b>
+                <li>Presentation Proposal acceptance notifications sent out: <strong>April 6, 2017</strong></li>
+		<li>Poster Abstract submission deadline: <strong>May 15, 2017</strong></li>
+		<li>Poster acceptance notifications sent out: <strong>May 31, 2017</strong></li>
 		<br><br>
-		<b>Preliminary SIG Program Available: May 8, 2016</b>
+		<b>Complete COSI Program Available:  April 30, 2017</b>
 		<br><br>
-		<b>Complete SIG Program Available: May 27, 2016</b>
-		<br><br>
-		<b>VarI-SIG meeting: July 9, 2016</b>
+		<b>VarI-SIG meeting: July 24, 2017</b>
 		<br><br>
 		<br>
-		<b>Note:</b> All Proposal submission abstracts are automatically considered for Poster presentations.
-               	<br>
-                All Poster Abstract submissions could be presented into the general conference poster session if submitted 
-                separately on the ISCB website. ISMB Poster and Late Poster submission deadlines are respectively March 10 and April 15, 2016. 
+		<b>Note:</b>
+                All Poster Abstract submissions are presented into the general conference poster session.
+                ISMB Late Poster submission deadline is June 5, 2017. 
         </p>
           <p align="left" class="textzone">&nbsp;</p>
           <p align="left" class="textzone">
