--- a/op.html
+++ b/op.html
@@ -235,17 +235,16 @@ type="text/css" title="Snp sig">
 		<li>Methods for predicting regulatory/structural/functional impacts of genetic variants.</li>
 		<li>Personal Genomics, GWAS studies and SNV prioritization.</li>
 		<li>Population genomics and phylogenetic analysis.</li>
-<!---		
+		
 		<br>
 		
-		<a href="https://www.easychair.org/conferences/?conf=varisig2016" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('submit5','','img/submit1.gif',1)" target="blank" class="mouse"><img src="img/submit.gif" alt="submit" name="submit5" width="85" height="30" border="0" id="submit5" /></a>
---->
+		<a href="https://www.easychair.org/conferences/?conf=varicosi2017" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('submit5','','img/submit1.gif',1)" target="blank" class="mouse"><img src="img/submit.gif" alt="submit" name="submit5" width="85" height="30" border="0" id="submit5" /></a>
 		<br /><br>
 		Proposals that demonstrate both the development of new computational techniques AND their application to Molecular and Systems Biology, with significant outcomes to biomedical, agricultural, and environmental questions are especially encouraged.
 		<br /><br />
-		<strong>Presenters will be given a 20-minute time slot (plus 5 minutes for questions) in the conference schedule to provide a summary and update to their work.</strong>
+		<strong>Presenters will be given a 20-minute time slot (including time for questions) in the conference schedule to provide a summary and update to their work.</strong>
 		<br /><br />
-Proposals should be submitted in template-free format  and must not exceed 3 pages (single space, 12 point font), including abstract, figures, tables, and bibliography. In either case, the proposal must contain an abstract whose length does not exceed 250 words. Note: This abstract will be automatically submitted to the VarI-SIG poster session.
+Proposals should be submitted in template-free format  and must not exceed 3 pages (single space, 12 point font), including abstract, figures, tables, and bibliography. In either case, the proposal must contain an abstract whose length does not exceed 250 words. Note: This abstract will be automatically submitted to the VarI-COSI poster session.
 <br /><br />
 If absolutely necessary, submissions can be accompanied by supplementary material, similar to submissions to scientific journals. The supplementary material should be collected in a separate file that is appropriately marked. However, we advise against adding supplementary material, in general. 
 <br /><br />
@@ -253,11 +252,11 @@ Proposals submitted for review should represent original research.
 <br /><br />
 <i>&nbsp;&nbsp;&nbsp;Note:</i>Only the previously unpublished work will be considered for the special issue publication.
 <br /><br />
-Proposals will be accepted electronically, in PDF format only until, April 10, 2016. (You have until 11.59 p.m. in the time zone of your choice).
+Proposals will be accepted electronically, in PDF format only until, March 10, 2017. (You have until 11.59 p.m. in the time zone of your choice).
 <br /><br />
-Notification of conditional acceptance will be provided by e-mail no later than April 24, 2016.
+Notification of conditional acceptance will be provided by e-mail no later than April 6, 2017.
 <br /><br />
-Works not accepted may be presented as VarI-SIG and regular conference posters. Poster information is available <a href='pa.html'><b>here</a></b>.
+Works not accepted may be presented as regular conference posters. Poster information is available <a href='pa.html'><b>here</a></b>.
 For questions concerning the scientific content of submissions, please contact <a href='conta.html'><b>the organizers</a></b>.
         <br />
         <br />
