--- a/index.html
+++ b/index.html
@@ -220,23 +220,28 @@ type="text/css" title="Snp sig">
         <p class="textzone"><h3>GENERAL INFO:</h3>
                   <b>WHAT:</b>  Variant Interpretation COSI Session at the ISMB/ECCB Conference<br>
 		  <b>WHEN:</b> 10:00 AM - 6:00 PM, July 24th, 2017<br>
-		  <b>WHERE:</b> Prague Convention Center, Prague, Czech Republic.<br />
+		  <b>WHERE:</b> Hall IA, Prague Convention Center, Prague, Czech Republic.<br />
                                                                     
-		  <br /><br />
+		  <br />
 		</strong>
-		
-		
+
+                <img src="img/PU3.gif" width="17" height="14" /><img src="img/PU1.gif" width="12" height="12" />
+                VarI-COSI Session 2017 - <a href="schedu.html"><b>Preliminary Program</b></a>
+                </i>
+                <br />
+                <br />
+
+<!--	
 		<img src="img/PU3.gif" width="17" height="14" /><img src="img/PU1.gif" width="12" height="12" />
                 <b>Open Call for <a href="./op.html">Presentation Proposals</a>
 		and <a href="./pa.html">Poster Abstracts</a>.</b>
 		 
-<!--
     		<blink><font color="red"></font></blink>
 		<a href="docs/vari-sig-2016-programme.pdf"><img src="img/pdf.gif"></a></i>
--->
+
 		<br />
 		<br />
-		
+-->		
 		</strong>
 		<h3>COSI AIMS:</h3>
 		The primary goal of the VarI-COSI is to outline and discuss the recent advances in the<strong> methodology for the annotation and analysis of genetic variants</strong>.
