--- a/special.html
+++ b/special.html
@@ -231,12 +231,46 @@ type="text/css" title="Snp sig">
         <br />
 	As for the previous editions, the VarI-COSI organizers will invite the authors of <strong>the presented papers</strong> and <strong> strong posters</strong>
         to submit their work for the next special issue publication.<br><br>
-        The papers for the <b><a href="" target=blank>VarI-SIG 2016</a></b> 
-        on BMC Genomics are currently under review. 
-<!--        
-	<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-016-2722-2?site=bmcgenomics.biomedcentral.com"> PMID:TBA</a>.</li><br>
+	
+	The <b><a href="http://varisig.biofold.org/2016/" target=blank>VarI-SIG 2016</a></b> Special Issue 
+	has been published on BMC Genomics and BMC Biophysics. The accepted papers of the special issue 
+	are available at BMC Genomics 
+        <a href="https://bmcgenomics.biomedcentral.com/articles/supplements/volume-18-supplement-5"
+        target=blank>web page</a> 
+	and BMC Biophysics 
+	<a href="https://bmcbiophys.biomedcentral.com/articles/supplements/volume-10-supplement-1"
+	target=blank>web page</a>. 
+
+	<br><br>
+	The list of the selected manuscript is reported below. 
+	<br><br>
 
 	<li>	
+	H. Billur Engin, Daniel Carlin, Dexter Pratt and Hannah Carter. Modeling of RAS complexes supports roles in cancer for less studied partners. BMC Biophysics 2017, 10 (Suppl 1):5.
+	<a href="https://bmcbiophys.biomedcentral.com/track/pdf/10.1186/s13628-017-0037-6">PMID:TBA</a>
+	</li><br>
+        <li>
+	Elena Álvarez de la Campa, Natàlia Padilla and Xavier de la Cruz. Development of pathogenicity predictors specific for variants that do not comply with clinical guidelines for the use of computational evidence. BMC Genomics 2017, 18 (Suppl 5):569.
+	<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-017-3914-0">PMID:TBA</a>
+        </li><br>
+	<li>
+	Andreas Krämer, Sohela Shah, Robert Anthony Rebres, Susan Tang and Daniel Rene Richards. Leveraging network analytics to infer patient syndrome and identify causal genes in rare disease cases. BMC Genomics 2017, 18 (Suppl 5):551.
+	<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-017-3910-4">PMID:TBA</a>
+	</li><br>
+	<li>
+	Giulia Babbi, Pier Luigi Martelli, Giuseppe Profiti, Samuele Bovo, Castrense Savojardo and Rita Casadio. eDGAR: a database of Disease-Gene Associations with annotated Relationships among genes. BMC Genomics 2017, 18 (Suppl 5):554.
+	<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-017-3911-3">PMID:TBA</a>
+	</li><br>
+	<li>
+	Morena Pappalardo, Francesca Collu, James Macpherson, Martin Michaelis, Franca Fraternali and Mark N. Wass. Investigating Ebola virus pathogenicity using molecular dynamics. BMC Genomics 2017, 18 (Suppl 5):566.
+	<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-017-3912-2">PMID:TBA</a>
+	</li><br>
+	<li>
+	Henry J. Martell, Kathie A. Wong, Juan F. Martin, Ziyan Kassam, Kay Thomas and Mark N. Wass. Associating mutations causing cystinuria with disease severity with the aim of providing precision medicine. BMC Genomics 2017, 18 (Suppl 5):550.
+	<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-017-3913-1">PMID:TBA</a>
+	</li><br>
+<!--
+
 		Pons T, Vazquez M, Matey-Hernandez ML, Brunak S, Valencia A and Izarzugaza JMG: KinMutRF: a random forest classifier of sequence variants in the human protein kinase superfamily. BMC Genomics 2016 17(Suppl 2):396. 
 		<a href="https://bmcgenomics.biomedcentral.com/track/pdf/10.1186/s12864-016-2723-1?site=bmcgenomics.biomedcentral.com"> PMID:TBA</a>.</li><br>
 	<li>	
@@ -257,7 +291,6 @@ type="text/css" title="Snp sig">
 		</li><br>
 	</ul>
 -->
-	<br>
 	<br><br>
         The BMC Gemomics special issue of the <b><a href="http://varisig.biofold.org/2015" target=blank>VarI-SIG 2015</a></b> is available at the following
         <b><a href="https://bmcgenomics.biomedcentral.com/articles/supplements/volume-17-supplement-2" target=blank>web page</a></b>.
